--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,10 @@
     </license>
   </licenses>
 
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
+
   <dependencies>
     <dependency>
       <groupId>org.eclipse.mylyn.github</groupId>
@@ -62,6 +66,9 @@
           <artifactId>maven-compiler-plugin</artifactId>
           <version>3.1</version>
           <configuration>
+            <compilerArgs>
+              <arg>-Xlint</arg>
+            </compilerArgs>
             <source>1.7</source>
             <target>1.7</target>
           </configuration>
